--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "trading-vue-js": "^1.0.2",
     "tradingview-widget": "^0.0.1"
   },
+"homepage": "https://www.binancelt.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
